--- a/frontend/public/nhan-vien.html
+++ b/frontend/public/nhan-vien.html
@@ -1,41 +1,103 @@
 <!DOCTYPE html>
 <html lang="vi">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Nhân viên</title>
+    <meta charset="UTF-8" />
+    <title>Quản lý nhân viên</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="../assets/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./assets/css/nhan-vien.css" />
   </head>
   <body>
-    <script src="../assets/app.js"></script>
-    <script>
-      requireAuth(["admin", "manager"]);
-    </script>
+    <div class="container mt-5">
+      <h2 class="text-center mb-4">Danh sách nhân viên</h2>
 
-    <div class="container py-4">
-      <div class="d-flex justify-content-between align-items-center mb-3">
-        <h1 class="h4 mb-0">Danh sách nhân viên</h1>
-        <button id="btnAdd" class="btn btn-primary">Thêm</button>
+      <div class="d-flex justify-content-end mb-3">
+        <button class="btn btn-primary" onclick="openForm()">
+          ➕ Thêm nhân viên
+        </button>
       </div>
 
-      <table class="table table-striped" id="tblNV">
-        <thead>
+      <table class="table table-bordered table-hover">
+        <thead class="table-light">
           <tr>
             <th>#</th>
-            <th>Tên</th>
-            <th>Phòng ban</th>
+            <th>Họ tên</th>
+            <th>Email</th>
             <th>Chức vụ</th>
-            <th></th>
+            <th>Phòng ban</th>
+            <th>Hành động</th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody id="employeeTableBody">
+          <!-- Dữ liệu sẽ được render tại đây bằng JS -->
+        </tbody>
       </table>
     </div>
 
-    <script src="../assets/nhan-vien.js"></script>
+    <!-- Modal Thêm/Sửa nhân viên -->
+    <div class="modal" tabindex="-1" id="employeeModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <form id="employeeForm" onsubmit="submitForm(event)">
+            <div class="modal-header">
+              <h5 class="modal-title" id="formTitle">Thêm nhân viên</h5>
+              <button
+                type="button"
+                class="btn-close"
+                onclick="closeForm()"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <input type="hidden" id="employeeId" />
+
+              <div class="mb-3">
+                <label class="form-label">Họ tên</label>
+                <input type="text" class="form-control" id="name" required />
+              </div>
+
+              <div class="mb-3">
+                <label class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required />
+              </div>
+
+              <div class="mb-3">
+                <label class="form-label">Chức vụ</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="position"
+                  required
+                />
+              </div>
+
+              <div class="mb-3">
+                <label class="form-label">Phòng ban</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="department"
+                  required
+                />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                onclick="closeForm()"
+              >
+                Huỷ
+              </button>
+              <button type="submit" class="btn btn-success">Lưu</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <script src="./assets/js/nhan-vien.js"></script>
   </body>
 </html>
