--- a/frontend/public/trangchinh.html
+++ b/frontend/public/trangchinh.html
@@ -3,28 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dashboard</title>
+    <title>Trang chính</title>
+
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="../assets/styles.css" rel="stylesheet" />
+    <!-- CSS chung -->
+    <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <script src="../assets/app.js"></script>
+    <!-- YÊU CẦU LOGIN -->
+    <script src="assets/js/app.js"></script>
     <script>
       requireAuth();
     </script>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary px-3">
-      <a class="navbar-brand" href="#">QL Nhân Viên</a>
-      <div class="collapse navbar-collapse">
-        <ul id="navLinks" class="navbar-nav me-auto"></ul>
-        <button class="btn btn-outline-secondary" onclick="logout()">
-          Đăng xuất
-        </button>
-      </div>
-    </nav>
+    <!-- Load menu từ navbar.html -->
+    <div id="menuContainer"></div>
 
     <main class="container py-4">
       <h1 class="h4 mb-3">Xin chào, <span id="helloName"></span> 👋</h1>
@@ -44,39 +41,43 @@
       </div>
     </main>
 
+    <!-- Tự động load navbar + xử lý logout -->
+    <script src="assets/js/navbar.js"></script>
+
+    <!-- Logic riêng -->
     <script>
       (function init() {
         const user = currentUser();
-        document.getElementById("helloName").textContent = user?.username || "";
-        // Nav theo role
-        const nav = document.getElementById("navLinks");
+        document.getElementById('helloName').textContent = user?.username || '';
+
+        // Thêm link điều hướng theo role
+        const nav = document.querySelector('.navbar-nav');
         const links = [
           {
-            href: "./nhan-vien.html",
-            text: "Nhân viên",
-            roles: ["admin", "manager"],
+            href: './nhan-vien.html',
+            text: 'Nhân viên',
+            roles: ['admin', 'manager'],
           },
           {
-            href: "./luong.html",
-            text: "Lương",
-            roles: ["admin", "manager", "employee"],
+            href: './luong.html',
+            text: 'Lương',
+            roles: ['admin', 'manager', 'employee'],
           },
         ];
         links.forEach((l) => {
           if (!l.roles || l.roles.includes(user.role)) {
-            const li = document.createElement("li");
-            li.className = "nav-item";
+            const li = document.createElement('li');
+            li.className = 'nav-item';
             li.innerHTML = `<a class="nav-link" href="${l.href}">${l.text}</a>`;
-            nav.appendChild(li);
+            nav?.appendChild(li);
           }
         });
 
-        // ví dụ gọi 2 API thống kê (tùy backend bạn đã có)
+        // Gọi API thống kê (ví dụ)
         api
-          .get("/nhan-vien?limit=1&page=1")
+          .get('/nhan-vien?limit=1&page=1', { auth: true })
           .then(() => {
-            // giả lập
-            document.getElementById("statNV").textContent = "...";
+            document.getElementById('statNV').textContent = '...'; // giả lập
           })
           .catch(() => {});
       })();
