--- a/frontend/public/dangnhap.html
+++ b/frontend/public/dangnhap.html
@@ -3,49 +3,106 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Đăng nhập</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link href="assets/css/styles.css" rel="stylesheet" />
+    <title>Đăng nhập - Quản lý nhân viên</title>
+    <link rel="icon" href="./assets/images/favicon.png" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <!-- Có thể thêm font nếu muốn -->
   </head>
-  <body class="bg-light d-flex align-items-center min-vh-100">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-12 col-sm-8 col-md-5">
-          <div class="card shadow-sm p-4">
-            <h1 class="h4 mb-3 text-center">Đăng nhập</h1>
-            <form id="loginForm" autocomplete="off">
-              <div class="mb-3">
-                <label class="form-label">Username</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="username"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Mật khẩu</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  name="password"
-                  required
-                />
-              </div>
-              <button class="btn btn-primary w-100" type="submit">
-                Đăng nhập
-              </button>
-              <div id="loginError" class="text-danger small mt-2"></div>
-            </form>
+  <body class="bg">
+    <header class="navbar">
+      <div class="container">
+        <div class="nav-brand">Quản lý nhân viên</div>
+        <div class="nav-right">
+          <span id="health-badge" class="badge badge-muted"
+            >Đang kiểm tra hệ thống…</span
+          >
+        </div>
+      </div>
+    </header>
+
+    <main class="container">
+      <div class="auth-wrap">
+        <div class="auth-card card">
+          <h1 class="auth-title">Đăng nhập</h1>
+          <p class="auth-subtitle">Vui lòng nhập thông tin để tiếp tục</p>
+
+          <form id="login-form" class="form">
+            <div class="form-group">
+              <label for="username">Tên đăng nhập</label>
+              <input
+                id="username"
+                name="username"
+                type="text"
+                placeholder="VD: admin"
+                required
+              />
+            </div>
+
+            <div class="form-group">
+              <label for="password">Mật khẩu</label>
+              <input
+                id="password"
+                name="password"
+                type="password"
+                placeholder="••••••••"
+                required
+              />
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-block">
+              Đăng nhập
+            </button>
+
+            <div id="login-error" class="alert alert-error" hidden></div>
+          </form>
+
+          <div class="auth-help">
+            <small>Quên mật khẩu? Liên hệ quản trị hệ thống.</small>
           </div>
         </div>
       </div>
-    </div>
+    </main>
 
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/auth.js"></script>
+    <footer class="footer">
+      <div class="container">
+        <small>© <span id="y"></span> HR System. All rights reserved.</small>
+      </div>
+    </footer>
+
+    <script type="module" src="./assets/js/auth.js"></script>
+
+    <!-- Script nhẹ cho hiển thị năm và test health (CHỈ UI, không gọi login) -->
+    <script>
+      document.getElementById('y').textContent = new Date().getFullYear();
+
+      // Hiển thị tình trạng /health (chỉ báo trạng thái)
+      (async () => {
+        const badge = document.getElementById('health-badge');
+        try {
+          const res = await fetch('http://localhost:8001/health');
+          const data = await res.json().catch(() => ({}));
+          if (res.ok && data?.db?.ok) {
+            badge.textContent = 'Hệ thống: OK';
+            badge.className = 'badge badge-ok';
+          } else {
+            badge.textContent = 'Hệ thống: Lỗi kết nối DB';
+            badge.className = 'badge badge-warn';
+          }
+        } catch {
+          badge.textContent = 'Hệ thống: Không kết nối';
+          badge.className = 'badge badge-error';
+        }
+      })();
+
+      // TẠM THỜI: ngăn submit thật (vì bạn đang yêu cầu chỉ HTML/CSS).
+      // Bước sau mình sẽ viết login JS gọi /auth/login và redirect.
+      document.getElementById('login-form').addEventListener('submit', (e) => {
+        e.preventDefault();
+        const alertEl = document.getElementById('login-error');
+        alertEl.hidden = false;
+        alertEl.textContent =
+          'Tính năng đăng nhập sẽ được kích hoạt sau khi gắn JS.';
+      });
+    </script>
   </body>
 </html>
