--- a/frontend/public/luong.html
+++ b/frontend/public/luong.html
@@ -2,55 +2,138 @@
 <html lang="vi">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Lương</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Lương - Quản lý nhân viên</title>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body>
-    <script src="../assets/js/app.js"></script>
-    <script>
-      requireAuth(['admin', 'manager', 'employee']);
-    </script>
+  <body class="bg">
+    <header class="navbar">
+      <div class="container">
+        <div class="nav-brand">Quản lý nhân viên</div>
+        <div class="nav-right">
+          <a class="btn" href="./nhan-vien.html">Nhân viên</a>
+          <a class="btn" href="./cham-cong.html">Chấm công</a>
+          <a class="btn" href="./bao-cao-luong.html">Báo cáo</a>
+          <span id="user-badge" class="badge badge-muted">Đang tải user…</span>
+          <button id="logout-btn" class="btn">Đăng xuất</button>
+        </div>
+      </div>
+    </header>
 
-    <div class="container py-4">
-      <h1 class="h4 mb-3">Bảng lương</h1>
-      <table class="table table-hover" id="tblLuong">
-        <thead>
-          <tr>
-            <th>Kỳ</th>
-            <th>Lương cơ bản</th>
-            <th>Thưởng</th>
-            <th>Khấu trừ</th>
-            <th>Thực nhận</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
+    <main class="container">
+      <div class="page-header">
+        <h1 class="page-title">Bảng lương</h1>
+        <div class="toolbar">
+          <select id="thang">
+            <option value="">Tháng</option>
+            <script>
+              for (let i = 1; i <= 12; i++) {
+                document.write(`<option value="${i}">${i}</option>`);
+              }
+            </script>
+          </select>
+          <input id="nam" type="number" placeholder="Năm (vd: 2025)" />
+          <input
+            id="pbId"
+            type="number"
+            placeholder="Phòng ban ID (tuỳ chọn)"
+          />
+          <button id="btn-search" class="btn">Lọc</button>
+          <button id="btn-refresh" class="btn">Tải lại</button>
+          <button id="btn-create" class="btn btn-primary">
+            Thêm bản lương
+          </button>
+        </div>
+      </div>
 
-    <script>
-      (async function () {
-        const user = currentUser();
-        let url = '/luong';
-        if (user.role === 'employee') url = '/luong/me';
+      <div class="table-wrap">
+        <table class="table">
+          <thead>
+            <tr>
+              <th style="width: 70px">ID</th>
+              <th>Nhân viên</th>
+              <th>Tháng/Năm</th>
+              <th>Lương cơ bản</th>
+              <th>Phụ cấp</th>
+              <th>Thưởng</th>
+              <th>Khác</th>
+              <th style="width: 150px">Thao tác</th>
+            </tr>
+          </thead>
+          <tbody id="tbody">
+            <tr>
+              <td colspan="8" class="text-muted">Đang tải…</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-        const res = await api.get(url + '?page=1&limit=50');
-        const items = res.items || res.rows || [];
-        const tbody = document.querySelector('#tblLuong tbody');
-        items.forEach((row) => {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-          <td>${row.thang || row.ky || ''}</td>
-          <td>${row.luong_co_ban ?? ''}</td>
-          <td>${row.thuong ?? ''}</td>
-          <td>${row.khau_tru ?? ''}</td>
-          <td class="fw-semibold">${row.thuc_nhan ?? ''}</td>`;
-          tbody.appendChild(tr);
-        });
-      })();
-    </script>
+      <div class="pagination">
+        <button id="prev" class="page-btn">«</button>
+        <span id="pageInfo" class="text-muted">Trang 1/1</span>
+        <button id="next" class="page-btn">»</button>
+      </div>
+    </main>
+
+    <!-- Modal -->
+    <dialog id="modal" style="max-width: 680px">
+      <form id="form" method="dialog" class="form" style="padding: 10px 2px">
+        <h3 id="modal-title" style="margin: 0">Thêm bản lương</h3>
+
+        <div class="form-group">
+          <label for="m-nvId">Nhân viên ID</label>
+          <input id="m-nvId" type="number" required />
+        </div>
+        <div class="form-group">
+          <label for="m-thang">Tháng</label>
+          <input id="m-thang" type="number" min="1" max="12" required />
+        </div>
+        <div class="form-group">
+          <label for="m-nam">Năm</label>
+          <input id="m-nam" type="number" required />
+        </div>
+        <div class="form-group">
+          <label for="m-pbId">Phòng ban ID (tuỳ chọn)</label>
+          <input id="m-pbId" type="number" />
+        </div>
+
+        <div class="form-group">
+          <label for="m-lcb">Lương cơ bản</label
+          ><input id="m-lcb" type="number" step="0.01" min="0" required />
+        </div>
+        <div class="form-group">
+          <label for="m-pc">Phụ cấp</label
+          ><input id="m-pc" type="number" step="0.01" min="0" />
+        </div>
+        <div class="form-group">
+          <label for="m-thuong">Thưởng</label
+          ><input id="m-thuong" type="number" step="0.01" min="0" />
+        </div>
+        <div class="form-group">
+          <label for="m-khac">Khoản khác</label
+          ><input id="m-khac" type="number" step="0.01" min="0" />
+        </div>
+        <div class="form-group">
+          <label for="m-note">Ghi chú</label><input id="m-note" />
+        </div>
+
+        <div id="modal-error" class="alert alert-error" hidden></div>
+
+        <div style="display: flex; gap: 8px; justify-content: flex-end">
+          <button id="btn-cancel" type="button" class="btn">Hủy</button>
+          <button id="btn-save" type="submit" class="btn btn-primary">
+            Lưu
+          </button>
+        </div>
+      </form>
+    </dialog>
+
+    <footer class="footer">
+      <div class="container">
+        <small>© <span id="y"></span> HR System</small>
+      </div>
+    </footer>
+
+    <script type="module" src="./assets/js/luong.js"></script>
   </body>
 </html>
